Containers/Kubernetes/k8s-simple-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-service
  labels:
    app: simple-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-service
  template:
    metadata:
      labels:
        app: simple-service
    spec:
      containers:
      - name: simple-service
        image: saaniltaneja/simple-service:v1
        ports:
        - containerPort: 8000
